# Embedded

./: README.md  Read Note 2.md  readnote1.md
I2C/: CMakeLists.txt  cfg.txt  head.S  i2c.c  i2c.h  init.c  interrupt.c  m41t11.c  m41t11.h  nand.c  s3c2440.h  serial.c  serial.h
I2C/include/: ctype.h  kernel.h  stdio.h  types.h
I2C/lib/: Makefile  ctype.c  printf.c  string.h
MMU/: Makefile  cfg.txt  head.S  init.c  led_mmu.c  mmu.dis  mmu.lds  mmu_elf
Nandflash/: Makefile  cfg.txt  head.S  init.c  main.c  nand.dis  nand.lds  nand_elf
hello/: hello  hello.c
interrupt/: Makefile  cfg.txt  head.S  init.c  interrupt.c  interrupt.dis  interrupt_elf  main.c  s3c2440.h
key_led/: Makefile  cfg.txt  crt0.S  key_led.c  key_led.dis  key_led_elf
led/: Makefile  cfg.txt  led_on.S  led_on.dis  led_on_elf
led_c/: Makefile  cfg.txt  crt0.S  led_c.dis  led_c_elf  oflash  tips.txt
options/: Makefile  arm-main.s  main.c  main.s  sub.c  sub.h  test
sdram/: Makefile  cfg.txt  head.S  led_c.c  sdram.dis  sdram_elf
stdio/: Makefile  cfg.txt  head.S  init.c  main.c  s3c2440.h  serial.c  serial.h  stdio.dis  stdio.lds  stdio_elf
stdio/include/: gcclib.h  system.h
stdio/lib/: printf.h  string.c  vsprintf.h
timer/: Makefile  cfg.txt  head.S  init.c  interrupt.c  main.c  s3c2440.h  timer.dis  timer.lds  timer_elf
uart/: Makefile  cfg.txt  head.S  init.c  main.c  serial.c  serial.h  uart.dis  uart.lds  uart_elf
